--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>   
 
     <div id="right_section">
-     <div>
+     <div id="right_section_box">
        <h1>Popular Posts</h1>
        <h2><a href="#">Quisque dictum pharetra neque</a></h2>
        <p>Fusce quis diam sit amet tortor luctus pellentesque. Donec accumsan urna non elit tristique mattis.</p>
@@ -177,9 +177,9 @@
        <p class="last">Aenean eleifend, neque hendrerit elementum sodales, odio erat sagittis quam, sed tempor orci magna vitae tellus.</p>
      </div>
      
-     <div>
+     <div id="right_section_box">
        <h1>Photo Gallery</h1>
-       <div>
+       <div id="galeria">
         
         <a href="images/img_1.jpg" rel="lightbox-gallery" title="RCA Jack">
           <img src="images/thumb_1.jpg" alt="gallery" border="0" />					
@@ -202,7 +202,7 @@
       </div>
     </div>
 
-    <div>
+    <div id="right_section_box">
      <h1>Advertisement</h1>
      <a href="#"><img src="images/ads.jpg" alt="Advertisement" border="0" /></a>
     </div>
